# personalized_andwriting_digitizer

./: .dockerignore  .replit  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  action.yml  docker-compose.yml  github-action-design.md  package.json  pyproject.toml  release-checklist.md  replit.md
.agents/memory/: MEMORY.md  engine-tarball.md  github-action.md  (+3 more)
attached_assets/: Pasted-FINAL-STUDIO-POLISH-PREPARE-FOR-WEBVIEW-FOUNDATION-IMPO_1782336332750.txt  Pasted-IMPLEMENTATION-REFINEMENTS-MANDATORY-Please-perform-the_1782244879455.txt  Pasted-PHASE-2-IMPLEMENTATION-STABILITY-PASS-IMPORTANT-Do-NOT-_1782251335732.txt  Pasted-PHASE-2-IMPLEMENTATION-STABILITY-PASS-IMPORTANT-Do-NOT-_1782253227337.txt  Pasted-PHASE-3-CONTRACT-REPORT-STANDARDIZATION-CI-FOUNDATION-I_1782254679705.txt  Pasted-PHASE-4-GOVERNANCE-ENGINE-IMPORTANT-Do-NOT-work-on-WebV_1782255575324.txt  Pasted-PHASE-5-GITHUB-ACTION-PR-WORKFLOW-IMPORTANT-Do-NOT-work_1782332600303.txt  Pasted-PHASE-6-SPECGUARD-STUDIO-IMPORTANT-Do-NOT-implement-Web_1782334192036.txt  Pasted-PHASE-7-WEBVIEW-MODE-RELEASE-PACKAGING-IMPORTANT-This-i_1782337106005.txt  Pasted-PROJECT-Handwriting-Digitizer-V1-GOAL-Build-a-full-stac_1782244053711.txt  Pasted-PROJECT-PIVOT-API-CONTRACT-DIFF-DEMO-DASHBOARD--1782250_1782250098315.txt
backend/: package-lock.json  package.json
engine/: api-contract-diff-engine-1.1.0.tgz  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ocr-service/: app.py  requirements.txt
scripts/: build-release.sh  validate-package.ts
(+71 files in other folders)
